--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"check": "adastra check"
 	},
 	"dependencies": {
+		"axios": "^1.4.0",
 		"bootstrap": "^5.3.0",
 		"bootstrap-icons": "^1.10.5",
 		"lodash": "^4.17.21",
